# bloovim

./: Cargo.toml  log4rs.yml
src/: b_state.rs  bloo_controller.rs  bloo_tui.rs  controller.rs  main.rs
