[package]
name = "bloovim"
version = "0.1.0"
edition = "2021"


[dependencies]
btleplug = "0.11.5"
rand = "0.8.5"
uuid = "1.8.0"
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3.30"
ratatui = "0.26.2"
crossterm = { version = "0.27.0", features = ["event-stream"] }
log = "0.4.21"
log4rs = "1.3.0"
